samples/_failures_safe/1761425648_0a5eb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b8f6b5b.c: In function ‘main’:
./samples/SAFE/__tmp_5b8f6b5b.c:200:9: error: expected declaration or statement at end of input
  200 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_5b8f6b5b.c:200:9: error: expected declaration or statement at end of input
